# Character_Ai_Bot

./: .env.example  .gitignore  README.md  config.py  main.py  pyproject.toml
bot/: __init__.py  bot.py
bot/handlers/: constants.py
bot/handlers/commands/: __init__.py  commands.py  commands_list.py
core/configuration/: amplitude_client.py  server.py
core/configuration/routers/: __init__.py  router.py
core/infrastructure/database/: __init__.py  setup.py
core/infrastructure/database/models/: __init__.py  character.py
core/infrastructure/database/repo/: __init__.py  base.py  character_user.py  characters.py  requests.py  telegram_messages.py  users.py
core/internal/events/: __init__.py  shutdown.py  startup.py
core/internal/routers/: telegram.py
core/internal/schemas/: __init__.py  content.py
front/: demo.html
logger/: __init__.py  logger.py  types.py
