[tool.poetry]
name = "characterailan"
version = "0.1.0"
description = "chat bot like character ai"
authors = ["Vittalius <Vittalius@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.2.0"
pydantic = "^2.5.2"
pydantic-settings = "^2.1.0"
fastapi = "^0.105.0"
uvicorn = "^0.24.0.post1"
sqlalchemy = "^2.0.23"
aiosqlite = "^0.19.0"
jinja2 = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
